--- a/New folder/Namaste-React-main/index.html
+++ b/New folder/Namaste-React-main/index.html
@@ -17,7 +17,8 @@
     </div>
     
     <!-- Injected External JavaScript File -->
- <script type="module" src="./Episode 10 - Jo Dikhta Hai, Vo Bikta Hai/Coding/src/index.js"></script>
+     <script type="module" src="./Episode 11-test/Coding/Coding copy/src/index.js"></script>
+ <!-- <script type="module" src="./Episode 10 - Jo Dikhta Hai, Vo Bikta Hai/Coding/src/index.js"></script> -->
     <!-- <script type="module" src="./Episode 10 - Jo Dikhta Hai, Vo Bikta Hai/Coding/src/App.js"></script> -->
     <!-- <script type="module" src="./Episode 10 - Jo Dikhta Hai, Vo Bikta Hai/Theory - Notes, Assignments & Assignment Solution/Assignment Solution/Coding Assignment Solution/src/App.js"></script> -->
     <!-- <script type="module" src="./Episode 09 - Optimizing our App/Coding/src/App.js"></script> -->
